bin/testsuite/tests/compiler/src/errors/compiler5331.swg
#global testerror "Err0094"

#test
{
    var x: [2] s32
    let y  = x[0].y
}
